--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,26 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
-
+		<dependency>
+		    <groupId>software.amazon.qldb</groupId>
+		    <artifactId>amazon-qldb-driver-java</artifactId>
+		    <version>1.0.1</version>
+		  </dependency>
+		  <dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-qldb</artifactId>
+		    <version>1.11.628</version>
+		  </dependency>
+		  <dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-ion</artifactId>
+		    <version>2.10.0.pr1</version>
+		  </dependency>
+		  <dependency>
+			  <groupId>com.google.code.gson</groupId>
+			  <artifactId>gson</artifactId>
+			  <version>2.8.6</version>
+			</dependency>
     </dependencies>
 
 
